-- =============================================
-- Database Schema for RestaurantPOS System
-- Dialect: PostgreSQL
-- Generated: 2025-12-11
-- =============================================

-- 1. Create Tables
-- =============================================

CREATE TABLE "Categories" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Name" character varying(50) NOT NULL,
    "Description" character varying(200),
    CONSTRAINT "PK_Categories" PRIMARY KEY ("Id")
);

CREATE TABLE "Users" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Username" character varying(100) NOT NULL,
    "Email" character varying(200) NOT NULL,
    "PasswordHash" text NOT NULL,
    "FullName" character varying(100) NOT NULL,
    "PhoneNumber" character varying(20),
    "Role" character varying(20) NOT NULL, -- Admin, Staff, Manager
    "IsActive" boolean NOT NULL DEFAULT TRUE,
    "CreatedAt" timestamp with time zone NOT NULL DEFAULT NOW(),
    "LastLoginAt" timestamp with time zone,
    "FcmToken" character varying(500),
    CONSTRAINT "PK_Users" PRIMARY KEY ("Id")
);

CREATE TABLE "Tables" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "TableNumber" character varying(20) NOT NULL,
    "Capacity" integer NOT NULL,
    "IsAvailable" boolean NOT NULL DEFAULT TRUE,
    "OccupiedAt" timestamp with time zone,
    "Floor" character varying(50) NOT NULL,
    "IsMerged" boolean NOT NULL DEFAULT FALSE,
    "MergedGroupId" integer,
    "MergedTableNumbers" text,
    CONSTRAINT "PK_Tables" PRIMARY KEY ("Id")
);

CREATE TABLE "Products" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Name" character varying(100) NOT NULL,
    "Description" character varying(500),
    "Price" numeric(18,2) NOT NULL,
    "CategoryId" integer NOT NULL,
    "ImageUrl" text,
    "IsAvailable" boolean NOT NULL DEFAULT TRUE,
    "CreatedAt" timestamp with time zone NOT NULL DEFAULT NOW(),
    "UpdatedAt" timestamp with time zone,
    CONSTRAINT "PK_Products" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Products_Categories_CategoryId" FOREIGN KEY ("CategoryId") REFERENCES "Categories" ("Id") ON DELETE CASCADE
);

CREATE TABLE "Orders" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "TableId" integer,
    "OrderDate" timestamp with time zone NOT NULL DEFAULT NOW(),
    "TotalAmount" numeric(18,2) NOT NULL DEFAULT 0,
    "Status" character varying(20) NOT NULL, -- Pending, Completed, Cancelled
    "CustomerName" text,
    "Notes" text,
    "OrderType" character varying(20) NOT NULL DEFAULT 'DineIn',
    "ParentOrderId" integer,
    "OrderGroupId" integer,
    "PaymentStatus" character varying(20) DEFAULT 'Unpaid',
    "PaymentMethod" character varying(20),
    "PaidAmount" numeric,
    "CompletedAt" timestamp with time zone,
    CONSTRAINT "PK_Orders" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Orders_Tables_TableId" FOREIGN KEY ("TableId") REFERENCES "Tables" ("Id")
);

CREATE TABLE "OrderItems" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "OrderId" integer NOT NULL,
    "ProductId" integer NOT NULL,
    "Quantity" integer NOT NULL,
    "UnitPrice" numeric(18,2) NOT NULL,
    "Notes" text,
    CONSTRAINT "PK_OrderItems" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_OrderItems_Orders_OrderId" FOREIGN KEY ("OrderId") REFERENCES "Orders" ("Id") ON DELETE CASCADE,
    CONSTRAINT "FK_OrderItems_Products_ProductId" FOREIGN KEY ("ProductId") REFERENCES "Products" ("Id") ON DELETE CASCADE
);

CREATE TABLE "Payments" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "OrderId" integer NOT NULL,
    "Amount" numeric NOT NULL,
    "Method" character varying(50) NOT NULL,
    "TransactionId" text,
    "Note" text,
    "PaymentDate" timestamp with time zone NOT NULL DEFAULT NOW(),
    "Status" character varying(20) NOT NULL,
    CONSTRAINT "PK_Payments" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Payments_Orders_OrderId" FOREIGN KEY ("OrderId") REFERENCES "Orders" ("Id") ON DELETE CASCADE
);

CREATE TABLE "PaymentSettings" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "BankName" character varying(100) NOT NULL,
    "BankBin" character varying(20) NOT NULL,
    "AccountNumber" character varying(50) NOT NULL,
    "AccountName" character varying(100) NOT NULL,
    "IsActive" boolean NOT NULL DEFAULT TRUE,
    "CreatedAt" timestamp with time zone NOT NULL DEFAULT NOW(),
    "UpdatedAt" timestamp with time zone,
    "UpdatedByUserId" integer,
    CONSTRAINT "PK_PaymentSettings" PRIMARY KEY ("Id")
);

CREATE TABLE "UserDevices" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "UserId" integer NOT NULL,
    "DeviceToken" text NOT NULL,
    "DeviceType" text,
    "LastUpdated" timestamp with time zone NOT NULL DEFAULT NOW(),
    CONSTRAINT "PK_UserDevices" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_UserDevices_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE CASCADE
);

CREATE TABLE "PasswordResetTokens" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "UserId" integer NOT NULL,
    "Token" text NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL DEFAULT NOW(),
    "ExpiresAt" timestamp with time zone NOT NULL,
    "IsUsed" boolean NOT NULL DEFAULT FALSE,
    "UsedAt" timestamp with time zone,
    CONSTRAINT "PK_PasswordResetTokens" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_PasswordResetTokens_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE CASCADE
);

-- 2. Create Indexes
-- =============================================

CREATE UNIQUE INDEX "IX_Users_Username" ON "Users" ("Username");
CREATE UNIQUE INDEX "IX_Users_Email" ON "Users" ("Email");
CREATE INDEX "IX_Products_CategoryId" ON "Products" ("CategoryId");
CREATE INDEX "IX_Orders_TableId" ON "Orders" ("TableId");
CREATE INDEX "IX_OrderItems_OrderId" ON "OrderItems" ("OrderId");
CREATE INDEX "IX_OrderItems_ProductId" ON "OrderItems" ("ProductId");
CREATE INDEX "IX_Payments_OrderId" ON "Payments" ("OrderId");
CREATE INDEX "IX_PaymentSettings_IsActive" ON "PaymentSettings" ("IsActive");
CREATE INDEX "IX_UserDevices_UserId" ON "UserDevices" ("UserId");
CREATE INDEX "IX_PasswordResetTokens_UserId" ON "PasswordResetTokens" ("UserId");

-- 3. Seed Data
-- =============================================

-- Default Admin: admin / Admin@123
INSERT INTO "Users" ("Username", "Email", "PasswordHash", "FullName", "Role", "IsActive", "CreatedAt")
VALUES ('admin', 'admin@restaurantpos.com', '$2a$11$0ZtSK1yPTeAKk2T2n9Lpzu80gR.XdEAeSWG8OBK1rciibimMNfba.', 'Administrator', 'Admin', TRUE, NOW());

-- Categories
INSERT INTO "Categories" ("Name", "Description") VALUES 
('Đồ ăn', 'Các món ăn chính và phụ'),
('Đồ uống', 'Các loại nước ngọt, bia, sinh tố'),
('Tráng miệng', 'Kem, chè, bánh ngọt');

-- Tables (Floor 1: 1-30, Floor 2: 31-50)
-- B01-B30
INSERT INTO "Tables" ("TableNumber", "Capacity", "Floor", "IsAvailable") VALUES
('B01', 4, 'Tầng 1', TRUE), ('B02', 4, 'Tầng 1', TRUE), ('B03', 4, 'Tầng 1', TRUE), ('B04', 4, 'Tầng 1', TRUE), ('B05', 4, 'Tầng 1', TRUE),
('B06', 4, 'Tầng 1', TRUE), ('B07', 4, 'Tầng 1', TRUE), ('B08', 4, 'Tầng 1', TRUE), ('B09', 4, 'Tầng 1', TRUE), ('B10', 4, 'Tầng 1', TRUE),
('B11', 4, 'Tầng 1', TRUE), ('B12', 4, 'Tầng 1', TRUE), ('B13', 4, 'Tầng 1', TRUE), ('B14', 4, 'Tầng 1', TRUE), ('B15', 4, 'Tầng 1', TRUE),
('B16', 4, 'Tầng 1', TRUE), ('B17', 4, 'Tầng 1', TRUE), ('B18', 4, 'Tầng 1', TRUE), ('B19', 4, 'Tầng 1', TRUE), ('B20', 4, 'Tầng 1', TRUE),
('B21', 6, 'Tầng 1', TRUE), ('B22', 6, 'Tầng 1', TRUE), ('B23', 6, 'Tầng 1', TRUE), ('B24', 6, 'Tầng 1', TRUE), ('B25', 6, 'Tầng 1', TRUE),
('B26', 2, 'Tầng 1', TRUE), ('B27', 2, 'Tầng 1', TRUE), ('B28', 2, 'Tầng 1', TRUE), ('B29', 2, 'Tầng 1', TRUE), ('B30', 2, 'Tầng 1', TRUE);

-- B31-B50
INSERT INTO "Tables" ("TableNumber", "Capacity", "Floor", "IsAvailable") VALUES
('B31', 4, 'Tầng 2', TRUE), ('B32', 4, 'Tầng 2', TRUE), ('B33', 4, 'Tầng 2', TRUE), ('B34', 4, 'Tầng 2', TRUE), ('B35', 4, 'Tầng 2', TRUE),
('B36', 4, 'Tầng 2', TRUE), ('B37', 4, 'Tầng 2', TRUE), ('B38', 4, 'Tầng 2', TRUE), ('B39', 4, 'Tầng 2', TRUE), ('B40', 4, 'Tầng 2', TRUE),
('B41', 4, 'Tầng 2', TRUE), ('B42', 4, 'Tầng 2', TRUE), ('B43', 4, 'Tầng 2', TRUE), ('B44', 4, 'Tầng 2', TRUE), ('B45', 4, 'Tầng 2', TRUE),
('B46', 6, 'Tầng 2', TRUE), ('B47', 6, 'Tầng 2', TRUE), ('B48', 6, 'Tầng 2', TRUE), ('B49', 6, 'Tầng 2', TRUE), ('B50', 6, 'Tầng 2', TRUE);
