erDiagram
    Users {
        int Id PK
        string Username
        string Email
        string FullName
        string Role
        boolean IsActive
    }
    Categories {
        int Id PK
        string Name
        string Description
    }
    Products {
        int Id PK
        string Name
        decimal Price
        int CategoryId FK
        boolean IsAvailable
    }
    Tables {
        int Id PK
        string TableNumber
        int Capacity
        boolean IsAvailable
        string Floor
    }
    Orders {
        int Id PK
        int TableId FK
        dateTime OrderDate
        decimal TotalAmount
        string Status
        string OrderType
    }
    OrderItems {
        int Id PK
        int OrderId FK
        int ProductId FK
        int Quantity
        decimal UnitPrice
    }
    Payments {
        int Id PK
        int OrderId FK
        decimal Amount
        string Method
        string Status
    }
    PaymentSettings {
        int Id PK
        string BankName
        string BankBin
        string AccountNumber
        boolean IsActive
    }
    UserDevices {
        int Id PK
        int UserId FK
        string DeviceToken
        string DeviceType
    }

    Categories ||--|{ Products : "has"
    Users ||--o{ UserDevices : "has"
    Tables ||--o{ Orders : "placed_at"
    Orders ||--|{ OrderItems : "contains"
    Products ||--o{ OrderItems : "included_in"
    Orders ||--o{ Payments : "paid_by"
